@@ -1,38 +1,21 @@
 package top.vmctcn.vmtu.core.util;
 
 import top.vmctcn.vmtu.core.VMTUCore;
-import com.google.gson.Gson;
-import com.google.gson.reflect.TypeToken;
 import org.apache.commons.io.FileUtils;
 import org.apache.commons.io.IOUtils;
-import org.jetbrains.annotations.NotNull;
 
 import java.io.IOException;
-import java.io.InputStreamReader;
-import java.lang.reflect.Type;
 import java.net.HttpURLConnection;
 import java.net.URI;
 import java.net.URISyntaxException;
-import java.net.URL;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Path;
 import java.util.ArrayList;
-import java.util.HashMap;
 import java.util.List;
-import java.util.Map;
 import java.util.concurrent.*;
 
 public class AssetUtil {
-    private static final String CFPA_ASSET_ROOT = "http://downloader1.meitangdehulu.com:22943/";
-    private static final List<String> MIRRORS;
-
-    static {
-        // 镜像地址可以改成服务器下发
-        MIRRORS = new ArrayList<>();
-        MIRRORS.add("https://raw.githubusercontent.com/");
-        // 此镜像源维护者：502y
-        MIRRORS.add("http://8.137.167.65:64684/");
-    }
+    private static final String ASSET_ROOT = "https://gitee.com/Wulian233/vmtu/raw/main/resourcepack/";
 
     public static void download(String url, Path localFile) throws IOException, URISyntaxException {
         VMTUCore.LOGGER.info("Downloading: {} -> {}", url, localFile);
@@ -46,8 +29,8 @@ public class AssetUtil {
     }
 
     public static String getFastestUrl() {
-        List<String> urls = new ArrayList<>(MIRRORS);
-        urls.add(CFPA_ASSET_ROOT);
+        List<String> urls = new ArrayList<>();
+        urls.add(ASSET_ROOT);
 
         ExecutorService executor = Executors.newFixedThreadPool(Math.max(urls.size(), 10));
         try {
@@ -58,6 +41,8 @@ public class AssetUtil {
                         return testUrlConnection(url);
                     } catch (IOException e) {
                         return null; // 表示失败
+                    } catch (URISyntaxException e) {
+                        return null;
                     }
                 }, executor);
                 futures.add(future);
@@ -77,22 +62,22 @@ public class AssetUtil {
                     for (CompletableFuture<String> f : futures) {
                         f.cancel(true);
                     }
-                    Log.info("Using fastest url: %s", fastest);
+                    VMTUCore.LOGGER.info("Using fastest url: {}", fastest);
                     return fastest;
                 }
             }
 
             // 全部失败，返回默认 URL
-            Log.info("All urls are unreachable, using CFPA_ASSET_ROOT");
-            return CFPA_ASSET_ROOT;
+            VMTUCore.LOGGER.info("All urls are unreachable, using ASSET_ROOT");
+            return ASSET_ROOT;
 
         } finally {
             executor.shutdownNow();
         }
     }
 
-    private static String testUrlConnection(String url) throws IOException {
-        HttpURLConnection conn = (HttpURLConnection) new URL(url).openConnection();
+    private static String testUrlConnection(String url) throws IOException, URISyntaxException {
+        HttpURLConnection conn = (HttpURLConnection) new URI(url).toURL().openConnection();
         conn.setRequestMethod("HEAD");
         conn.setConnectTimeout(3000);
         conn.setReadTimeout(5000);
@@ -101,28 +86,7 @@ public class AssetUtil {
         if (code >= 200 && code < 300) {
             return url;
         }
-        Log.debug("URL unreachable: %s, code: %d", url, code);
+        VMTUCore.LOGGER.debug("URL unreachable: {}, code: {}", url, code);
         throw new IOException("URL unreachable: " + url);
-    }
-
-    @NotNull
-    public static Map<String, String> getGitIndex() {
-        try {
-            URL index_url = new URL("https://raw.githubusercontent.com/CFPAOrg/Minecraft-Mod-Language-Package/refs/heads/index/version-index.json");
-            HttpURLConnection httpConn = (HttpURLConnection) index_url.openConnection();
-            httpConn.setRequestMethod("GET");
-            httpConn.setConnectTimeout(5000);
-            httpConn.setReadTimeout(5000);
-
-            try (InputStreamReader reader = new InputStreamReader(httpConn.getInputStream())) {
-                Type mapType = new TypeToken<Map<String, String>>() {
-                }.getType();
-                return new Gson().fromJson(reader, mapType);
-            } finally {
-                httpConn.disconnect();
-            }
-        } catch (Exception ignore) {
-            return new HashMap<>();
-        }
     }
 }
